[gd_scene load_steps=9 format=3 uid="uid://c17hhjl10eqxm"]

[ext_resource type="Script" path="res://main.gd" id="1_2rxsg"]
[ext_resource type="Script" path="res://globals/ui.gd" id="2_8teki"]
[ext_resource type="Script" path="res://BulletManager.gd" id="4_e0e4j"]
[ext_resource type="Script" path="res://SCapturableBase.gd" id="5_ab5g6"]
[ext_resource type="PackedScene" uid="uid://73431pbv03bc" path="res://capturable_base.tscn" id="5_j8ak2"]
[ext_resource type="PackedScene" uid="uid://dswnfh7p0ei1c" path="res://actors/object/ally.tscn" id="6_n5hfa"]
[ext_resource type="PackedScene" uid="uid://bar0vyyhnvtbe" path="res://map_ai.tscn" id="7_0xdkj"]
[ext_resource type="PackedScene" uid="uid://dj03726dpg1wt" path="res://actors/object/enemy.tscn" id="7_v75y4"]

[node name="Main" type="Node2D"]
script = ExtResource("1_2rxsg")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(70, 340)
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("2_8teki")

[node name="SBullet" type="Node" parent="."]
process_mode = 3
script = ExtResource("4_e0e4j")

[node name="SCapturableBase" type="Node" parent="."]
script = ExtResource("5_ab5g6")

[node name="CapturableBase" parent="SCapturableBase" instance=ExtResource("5_j8ak2")]
position = Vector2(489, 440)

[node name="CapturableBase2" parent="SCapturableBase" instance=ExtResource("5_j8ak2")]
position = Vector2(793, 433)

[node name="CapturableBase3" parent="SCapturableBase" instance=ExtResource("5_j8ak2")]
position = Vector2(1106, 439)

[node name="AllyMapAI" parent="." instance=ExtResource("7_0xdkj")]
team_name = 1
unit = ExtResource("6_n5hfa")

[node name="EnemyMapAI" parent="." instance=ExtResource("7_0xdkj")]
base_capture_start_order = 0
team_name = 2
unit = ExtResource("7_v75y4")

[node name="AllyRespawnPoints" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Pos1" type="Marker2D" parent="AllyRespawnPoints"]

[node name="Pos2" type="Marker2D" parent="AllyRespawnPoints"]
position = Vector2(-79, 127)

[node name="Pos3" type="Marker2D" parent="AllyRespawnPoints"]
position = Vector2(-218, 355)

[node name="Pos4" type="Marker2D" parent="AllyRespawnPoints"]
position = Vector2(-52, 535)

[node name="EnemyRespawnPoints" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -157.0
offset_top = 530.0
offset_right = -157.0
offset_bottom = 530.0
rotation = 3.14159
pivot_offset = Vector2(1797, 2)

[node name="Pos5" type="Marker2D" parent="EnemyRespawnPoints"]
position = Vector2(1793, 0)

[node name="Pos6" type="Marker2D" parent="EnemyRespawnPoints"]
position = Vector2(1714, 127)

[node name="Pos7" type="Marker2D" parent="EnemyRespawnPoints"]
position = Vector2(1575, 355)

[node name="Pos8" type="Marker2D" parent="EnemyRespawnPoints"]
position = Vector2(1741, 535)
